# icegate

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  Makefile  NOTICE  README.md  RUST.md  audit.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml  skaffold-crds.yaml  skaffold-icegate.yaml  skaffold-observability.yaml  skaffold.yaml
crates/icegate-catalog-s3/: AGENTS.md  Cargo.toml  README.md
crates/icegate-catalog-s3/src/: catalog.rs  config.rs  error.rs  lib.rs  model.rs  root.rs
crates/icegate-catalog-s3/src/codec/: json.rs  mod.rs
crates/icegate-catalog-s3/src/infra/: mod.rs  retrier.rs
crates/icegate-catalog-s3/src/storage/: cached.rs  in_memory.rs  mod.rs  s3.rs
crates/icegate-catalog-s3/src/tests/: catalog_test.rs  common.rs  mod.rs
crates/icegate-common/: Cargo.toml
crates/icegate-common/src/: SCHEMA.md  config.rs  error.rs  lib.rs  logs_merge.rs  manifest_scan.rs  metrics.rs  parquet_encoding.rs  parquet_source.rs  parquet_writer.rs  retrier.rs  schema.rs  tracing.rs  wal_offset.rs
crates/icegate-common/src/catalog/: builder.rs  config.rs  mod.rs
crates/icegate-common/src/iceberg_write/: mod.rs
crates/icegate-common/src/merge/: cluster.rs  merger.rs  mod.rs  sort_key.rs
crates/icegate-common/src/storage/: builder.rs  cache.rs  config.rs  icegate_s3.rs  icegate_storage.rs  mod.rs  prefetch.rs
crates/icegate-common/src/testing/: minio.rs  mod.rs  s3.rs
crates/icegate-common/tests/: manifest_scan_it.rs
crates/icegate-ingest/: Cargo.toml
crates/icegate-ingest/src/: config.rs  error.rs  lib.rs  main.rs  otlp_metrics_partial.rs  otlp_partial.rs  otlp_traces_partial.rs  runtime_threads.rs  transform.rs  wal_sort.rs
crates/icegate-ingest/src/cli/: mod.rs
crates/icegate-ingest/src/infra/: metrics.rs  mod.rs
crates/icegate-ingest/src/otlp_grpc/: config.rs  error.rs  mod.rs  server.rs  services.rs
crates/icegate-ingest/src/otlp_http/: config.rs  error.rs  handlers.rs  mod.rs  models.rs  routes.rs  server.rs
crates/icegate-ingest/src/partial_otlp/: metrics.rs  mod.rs  traces.rs
crates/icegate-ingest/src/shift/: backpressure.rs  commit_runner.rs  config.rs  executor.rs  iceberg_storage.rs  instrumentation.rs  mod.rs  offset.rs  parquet_meta_reader.rs  pipeline_tests.rs  plan_runner.rs  planner.rs  planner_partitioning.rs  row_groups_merger.rs  shift_runner.rs  sorted_batch_merger.rs  timeout.rs  writer.rs
crates/icegate-ingest/src/transform/: attributes.rs  logs.rs  metrics.rs  mod.rs  spans.rs
crates/icegate-ingest/src/wal/: batch.rs  boundary.rs  columns.rs  metadata.rs  mod.rs  sorter.rs  test_utils.rs  writer.rs
crates/icegate-jobmanager/: Cargo.toml  Makefile
crates/icegate-jobmanager/examples/: README.md  docker-compose.yml  json_model_job.rs  simple_job.rs  simple_job_cbor.rs  simple_sequence_job.rs
crates/icegate-jobmanager/src/: lib.rs
crates/icegate-jobmanager/src/core/: error.rs  job.rs  mod.rs  registry.rs  task.rs
crates/icegate-jobmanager/src/execution/: job_manager.rs  jobs_manager.rs  mod.rs  worker.rs
crates/icegate-jobmanager/src/infra/: metrics.rs  mod.rs  retrier.rs
crates/icegate-jobmanager/src/storage/: cached.rs  in_memory.rs  mod.rs  s3.rs
crates/icegate-jobmanager/src/tests/: cache_invalidation_test.rs  concurrent_workers_test.rs  deadline_expiry_test.rs  dynamic_task_test.rs  job_iterations_test.rs  mod.rs  shutdown_test.rs  simple_job_test.rs  task_dependencies_test.rs  task_failure_test.rs  two_jobs_test.rs
crates/icegate-maintain/: Cargo.toml
crates/icegate-maintain/src/: config.rs  error.rs  lib.rs  main.rs
crates/icegate-maintain/src/cli/: mod.rs
crates/icegate-maintain/src/compact/: README.md  config.rs  iceberg_source.rs  metrics.rs  mod.rs  planner.rs  rewrite.rs
crates/icegate-maintain/src/gc/: config.rs  decide.rs  metrics.rs  mod.rs  reachable.rs  sweep.rs
crates/icegate-maintain/src/migrate/: operations.rs
crates/icegate-maintain/src/shift/: mod.rs  offset.rs  processor.rs  writer.rs
crates/icegate-maintain/tests/: compaction_e2e_it.rs  gc_sweep_it.rs  iceberg_source_it.rs  migrate_integration_test.rs  rewrite_it.rs
crates/icegate-query/: Cargo.toml  README.md
crates/icegate-query/benches/: count_over_time.rs  loki_queries.rs
crates/icegate-query/benches/common/: harness.rs  mod.rs
crates/icegate-query/src/: config.rs  error.rs  lib.rs  main.rs
crates/icegate-query/src/cli/: mod.rs
crates/icegate-query/src/engine/: config.rs  core.rs  mod.rs
crates/icegate-query/src/flight_sql/: config.rs  mod.rs  provider.rs  server.rs  service.rs  tenant_catalog.rs  tenant_id.rs
crates/icegate-query/src/infra/: metrics.rs  mod.rs
crates/icegate-query/src/logql/: Makefile  README.md  TECHNICAL_SPEC.md  common.rs  duration.rs  log.rs  mod.rs  parser.rs  planner.rs
crates/icegate-query/src/loki/: config.rs  error.rs  executor.rs  formatters.rs  handlers.rs  mod.rs  models.rs  predicate.rs  routes.rs  server.rs
crates/icegate-query/src/prometheus/: config.rs  error.rs  executor.rs  handlers.rs  mod.rs  models.rs  routes.rs  server.rs
crates/icegate-query/src/promql/: Makefile  aggregation.rs  binary.rs  common.rs  duration.rs  expr.rs  function.rs  mod.rs  parser.rs  planner.rs  selector.rs
crates/icegate-query/src/tempo/: config.rs  error.rs  executor.rs  formatters.rs  handlers.rs  metadata.rs  mod.rs  models.rs  routes.rs  server.rs  trace_by_id.rs  validation.rs
crates/icegate-query/src/traceql/: Makefile  common.rs  duration.rs  expr.rs  iceberg_predicate.rs  metric.rs  mod.rs  parser.rs  planner.rs  spanset.rs
crates/icegate-query/tests/: flight_sql_tests.rs  loki_tests.rs  tempo_tests.rs
crates/icegate-query/tests/flight_sql/: harness.rs  metadata.rs  mod.rs  read_only.rs  smoke.rs  (+2 more)
crates/icegate-queue/: Cargo.toml  README.md
crates/icegate-queue/benches/: queue_s3_bench.rs
crates/icegate-queue/src/: accumulator.rs  channel.rs  config.rs  error.rs  extract.rs  lib.rs  reader.rs  segment.rs  writer.rs
crates/icegate-queue/tests/: reader_integration.rs  recovery_integration.rs  writer_integration.rs
(+353 files in other folders)
