[package]
name = "icegate"
version = "0.1.0"
edition = "2024"
authors = ["IceGate Tech"]
description = "Observability data lake engine"
license = "Apache-2.0"
repository = "https://github.com/icegatetech/icegate"
keywords = ["iceberg", "datafusion", "engine", "data-lake", "observability"]
categories = ["database", "data-structures"]

# Linting configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "deny"

[lints.clippy]
# Pedantic lints
pedantic = { level = "warn", priority = -1 }

# Nursery lints (experimental but useful)
nursery = { level = "warn", priority = -1 }

# Restriction lints (opt-in)
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "deny"
expect_used = "deny"

# Performance lints
perf = { level = "warn", priority = -1 }

# Cargo lints
cargo = { level = "warn", priority = -1 }

# Correctness (deny by default)
correctness = { level = "deny", priority = -1 }

# Style preferences
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

# Allow multiple crate versions for transitive dependencies we can't control
multiple_crate_versions = "allow"

[dependencies]
# ANTLR parser
antlr4rust = "0.5"

# Iceberg
iceberg = "0.7.0"
iceberg-catalog-rest = "0.7.0"
iceberg-datafusion = "0.7.0"

# DataFusion
datafusion = "48"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Fast integer formatting
itoa = "1"

[[bin]]
name = "query"
path = "src/bin/query.rs"

[[bin]]
name = "maintain"
path = "src/bin/maintain.rs"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Integration testing with containers
testcontainers = { version = "0.23", features = ["http_wait"] }
testcontainers-modules = { version = "0.11", features = ["minio"] }
aws-config = "1"
aws-sdk-s3 = "1"
