[workspace]
resolver = "3"
members = [
    "crates/icegate-common",
    "crates/icegate-queue",
    "crates/icegate-query",
    "crates/icegate-ingest",
    "crates/icegate-maintain",
    "crates/icegate-jobmanager",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
authors = ["IceGate Tech"]
license = "Apache-2.0"
repository = "https://github.com/icegatetech/icegate"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unused_imports = "deny"
unused_variables = "deny"
dead_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "deny"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
single_match_else = "allow"

[workspace.dependencies]
# Internal crates
icegate-common = { path = "crates/icegate-common" }
icegate-queue = { path = "crates/icegate-queue" }

# Arrow ecosystem (must match iceberg's version)
arrow = { version = "57", default-features = false, features = ["prettyprint"] }
parquet = { version = "57", default-features = false, features = ["arrow", "object_store", "zstd"] }
object_store = { version = "0.12", features = ["aws"] }

# Error handling
thiserror = "2"

# Utilities
uuid = { version = "1.19", features = ["v7", "v4", "serde"] }

# ANTLR parser
antlr4rust = "0.5"

# Iceberg
#iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "d78f6567cabe917d75ae9884144a5a0f70e08ace" }
#iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "d78f6567cabe917d75ae9884144a5a0f70e08ace" }
#iceberg-datafusion = { git = "https://github.com/apache/iceberg-rust", rev = "d78f6567cabe917d75ae9884144a5a0f70e08ace" }

# Fork: icegatetech/iceberg-rust (tracking #25)
# Patches: DataFusion 51 + Arrow 57 compat (upstream PR #1830 closed), memory catalog enhancements
# Upstream plan: Switch back when DataFusion 51 officially supported upstream
# Maintenance: develop branch rebased on upstream main; run `make ci` after each sync
iceberg = { git = "https://github.com/icegatetech/iceberg-rust", rev = "f1ba3920de5fb7494ef3f83be495d2de43e230e9" }
iceberg-catalog-rest = { git = "https://github.com/icegatetech/iceberg-rust", rev = "f1ba3920de5fb7494ef3f83be495d2de43e230e9" }
iceberg-datafusion = { git = "https://github.com/icegatetech/iceberg-rust", rev = "f1ba3920de5fb7494ef3f83be495d2de43e230e9" }

# DataFusion
datafusion = "51"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3.31"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"

# HTTP server
axum = "0.7"
axum-extra = { version = "0.9", features = ["query"] }
tower-http = { version = "0.5", features = ["trace"] }

# gRPC server
tonic = "0.12"
prost = "0.13"

# OpenTelemetry proto (with tonic service generation)
opentelemetry-proto = { version = "0.27", features = ["gen-tonic", "logs", "trace", "metrics"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Regex for matcher evaluation
regex = "1.12"

# Utilities
itoa = "1"
bytes = "1"
hex = "0.4"
rand = "0.9.2"

# Dev dependencies
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
testcontainers = { version = "0.26", features = ["http_wait"] }
testcontainers-modules = { version = "0.14", features = ["minio"] }
aws-config = "1.1"
aws-sdk-s3 = "1.11"
criterion = "0.5"
