[package]
name = "icegate-common"
description = "Shared infrastructure for IceGate"
readme = "../../README.md"
keywords = ["iceberg", "datafusion", "data-lake", "observability"]
categories = ["database"]
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
testing = ["testcontainers", "aws-config", "aws-sdk-s3"]

[dependencies]
# Iceberg
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }

# Storage
object_store = { workspace = true }

# Configuration
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-instrumentation-tokio = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

# OpenTelemetry tracing
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Testing utilities (optional feature)
testcontainers = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
