[package]
name = "icegate-common"
description = "Shared infrastructure for IceGate"
readme = "../../README.md"
keywords = ["iceberg", "datafusion", "data-lake", "observability"]
categories = ["database"]
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[features]
testing = ["testcontainers", "aws-config", "aws-sdk-s3"]

[dependencies]
# Iceberg
arrow = { workspace = true }
iceberg = { workspace = true }
icegate-catalog-s3 = { workspace = true }
iceberg-catalog-rest = { workspace = true }
iceberg-catalog-s3tables = { workspace = true }
iceberg-catalog-glue = { workspace = true }
foyer = { workspace = true, features = ["tracing"] }
parquet = { workspace = true }
typetag = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# Storage
object_store = { workspace = true }
opendal = { workspace = true }
object_store_opendal = { workspace = true }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-instrumentation-tokio = { workspace = true }
opentelemetry-resource-detectors = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

# OpenTelemetry tracing
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Testing utilities (optional feature)
testcontainers = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }

[dev-dependencies]
# Self-reference with `testing` enabled so integration tests under `tests/`
# can reach `icegate_common::testing` (MinIO container + S3 bucket helpers).
# Cargo unifies this with the library build for test targets only.
icegate-common = { path = ".", features = ["testing"] }
# Parquet-compaction manifest-scan integration test: seed data files via the
# owned S3 catalog + Iceberg writer, then enumerate them with bounds.
icegate-catalog-s3 = { workspace = true }
testcontainers = { workspace = true }
futures = { workspace = true }
