[package]
name = "icegate-ingest"
description = "OTLP data ingestion for IceGate"
readme = "../../README.md"
keywords = ["iceberg", "otlp", "opentelemetry", "observability"]
categories = ["database"]
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
icegate-common = { workspace = true }

# Iceberg
iceberg = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }

# Logging
tracing = { workspace = true }
