[package]
name = "icegate-ingest"
description = "OTLP data ingestion for IceGate"
readme = "../../README.md"
keywords = ["iceberg", "otlp", "opentelemetry", "observability"]
categories = ["database"]
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "ingest"
path = "src/main.rs"

[dependencies]
icegate-common = { workspace = true }
icegate-jobmanager = { path = "../icegate-jobmanager" }
icegate-queue = { path = "../icegate-queue" }

# Apache Arrow
arrow = { workspace = true }
parquet = { workspace = true }

# Iceberg
iceberg = { workspace = true }

# Object Store
object_store = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP server
axum = { workspace = true }

# gRPC server
tonic = { workspace = true }
prost = { workspace = true }
opentelemetry-proto = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Async utils
async-trait = { workspace = true }
