[package]
name = "icegate-jobmanager"
description = "Job manager"
readme = "../../README.md"
keywords = ["iceberg", "S3", "job", "task"]
categories = ["database"]
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# AWS S3
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = "0.2"

# Metrics
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }


# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
futures-util = "0.3"

# Concurrency
parking_lot = "0.12"
async-trait = { workspace = true }
dashmap = "6.1.0"
tracing-subscriber = { workspace = true }


[dev-dependencies]
# Testcontainers for MinIO
testcontainers = { workspace = true, features = ["blocking"] }
