[package]
name = "icegate-maintain"
description = "Maintenance operations for IceGate"
readme = "../../README.md"
keywords = ["iceberg", "maintenance", "migration", "observability"]
categories = ["database"]
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "maintain"
path = "src/main.rs"

[dependencies]
icegate-common = { workspace = true }
icegate-queue = { workspace = true }

# Iceberg
iceberg = { workspace = true }
arrow = { workspace = true }
uuid = { workspace = true }
parquet = { workspace = true }

# Object storage
object_store = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# CLI
clap = { workspace = true }

# Configuration
serde = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
