 [package]
name = "icegate-maintain"
description = "Maintenance operations for IceGate"
readme = "../../README.md"
keywords = ["iceberg", "maintenance", "migration", "observability"]
categories = ["database"]
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "maintain"
path = "src/main.rs"

[dependencies]
icegate-common = { workspace = true }
icegate-jobmanager = { path = "../icegate-jobmanager" }

# Iceberg
iceberg = { workspace = true }

# Arrow ecosystem
arrow = { workspace = true }
parquet = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# CLI
clap = { workspace = true }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics: compaction instruments record to the globally-installed meter
# provider (no-op when none is set), mirroring ingest's shift metrics.
opentelemetry = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
icegate-common = { workspace = true, features = ["testing"] }
# Integration tests seed tables over MinIO through the concrete S3 catalog and
# then drive compaction against it as an `Arc<dyn Catalog>`.
icegate-catalog-s3 = { workspace = true }
testcontainers = { workspace = true }
